[gd_scene load_steps=10 format=3 uid="uid://ce2t4l3vm53ot"]

[ext_resource type="Script" path="res://Ennemy/hornet_nest.gd" id="1_kgd3h"]
[ext_resource type="Texture2D" uid="uid://cjn3yv4yk0djp" path="res://assets/hornet hive.png" id="3_dpjoy"]
[ext_resource type="Script" path="res://Ressources/leaf_sliders.gd" id="3_kh26g"]
[ext_resource type="FontFile" uid="uid://b8ha28010iwbh" path="res://fonts/AntFont-Regular (1).ttf" id="4_n57c3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8mf6j"]
atlas = ExtResource("3_dpjoy")
region = Rect2(0, 0, 1604, 1608)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xj36"]
atlas = ExtResource("3_dpjoy")
region = Rect2(1604, 0, 1604, 1608)

[sub_resource type="SpriteFrames" id="SpriteFrames_ujqpf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mf6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xj36")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gbmt3"]
radius = 699.04

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_whsim"]
bg_color = Color(0.9, 0.9, 0.9, 1)

[node name="HornetNest" type="Area2D"]
script = ExtResource("1_kgd3h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ujqpf")
autoplay = "default"
frame_progress = 0.985552

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gbmt3")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -200.0
offset_top = -200.0
offset_right = -192.0
offset_bottom = -192.0
scale = Vector2(50, 50)

[node name="Background" type="PanelContainer" parent="."]
visible = false
z_index = 1
offset_left = 300.0
offset_top = 300.0
offset_right = 491.0
offset_bottom = 449.0
scale = Vector2(3, 3)
theme_override_styles/panel = SubResource("StyleBoxFlat_whsim")

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 2
script = ExtResource("3_kh26g")

[node name="Label_worker" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_n57c3")
text = "Worker ants to send"

[node name="HSlider_worker" type="HSlider" parent="Background/VBoxContainer"]
layout_mode = 2

[node name="slider_label_worker" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_n57c3")
horizontal_alignment = 1

[node name="Label_warrior" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_n57c3")
text = "Warrior ants to send"

[node name="HSlider_warrior" type="HSlider" parent="Background/VBoxContainer"]
layout_mode = 2

[node name="slider_label_warrior" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_n57c3")
horizontal_alignment = 1

[node name="Gather" type="Button" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_n57c3")
text = "SEND"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="Background/VBoxContainer/HSlider_worker" to="Background/VBoxContainer" method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Background/VBoxContainer/HSlider_warrior" to="Background/VBoxContainer" method="_on_h_slider_value_changed"]
